--- a/service/index.html
+++ b/service/index.html
@@ -12,6 +12,8 @@
   </script>
 
   <p>このページを表示するだけで支援になります！</p>
-  <!-- 広告タグをここに貼る（例：動画広告） -->
+  <!-- admax -->
+<script src="https://adm.shinobi.jp/s/e458b94bbde41433f7530da05d6d6df4"></script>
+<!-- admax -->
 </body>
 </html>
